# batdetect2

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  LICENSE.md  Makefile  README.md  app.py  batdetect2_colab_notebook.ipynb  batdetect2_notebook.ipynb  config.py  config.yaml  datasets.md  environment.yml  faq.md  justfile  pyproject.toml  requirements.txt  run_batdetect.py
.github/workflows/: ci.yml  docs-pages.yml  publish-pypi.yml  python-package.yml  python-publish.yml
.ropeproject/: autoimport.db
bat_detect/: api.py  cli.py  command.py  types.py
bat_detect/detector/: compute_features.py  model_helpers.py  models.py  parameters.py  post_process.py
bat_detect/evaluate/: evaluate_models.py  readme.md
bat_detect/finetune/: finetune_model.py  prep_data_finetune.py  readme.md
bat_detect/models/: readme.md
bat_detect/train/: audio_dataloader.py  evaluate.py  losses.py  readme.md  train_model.py  train_split.py  train_utils.py
bat_detect/utils/: audio_utils.py  detector_utils.py  plot_utils.py  visualize.py  wavfile.py
batdetect2/: __init__.py  api.py  cli.py  configs.py  data.py  modules.py  plot.py  post_process.py  terms.py  types.py
batdetect2/cli/: __init__.py  base.py  compat.py  data.py  train.py
batdetect2/compat/: data.py  params.py
batdetect2/configs/: __init__.py
batdetect2/data/: __init__.py  annotations.py  augmentations.py  compat.py  data.py  datasets.py  iterators.py  labels.py  preprocessing.py  types.py
batdetect2/data/annotations/: __init__.py  aeof.py  aoef.py  batdetect2.py  batdetect2_files.py  batdetect2_merged.py  legacy.py  types.py
batdetect2/detector/: compute_features.py  model_helpers.py  models.py  parameters.py  post_process.py
batdetect2/evaluate/: __init__.py  evaluate.py  evaluate_models.py  match.py  metrics.py  readme.md  types.py
batdetect2/finetune/: finetune_model.py  prep_data_finetune.py  readme.md
batdetect2/models/: __init__.py  backbones.py  blocks.py  build.py  config.py  decoder.py  detectors.py  encoder.py  encoders.py  feature_extractors.py  heads.py  post_process.py  types.py  typing.py
batdetect2/plotting/: common.py  heatmaps.py
batdetect2/postprocess/: __init__.py  arrays.py  config.py  decoding.py  detection.py  extraction.py  non_max_supression.py  remapping.py  types.py
batdetect2/preprocess/: __init__.py  audio.py  config.py  spectrogram.py  types.py
batdetect2/targets/: __init__.py  classes.py  filtering.py  labels.py  rois.py  targets.py  terms.py  transform.py  types.py
batdetect2/train/: __init__.py  audio_dataloader.py  augmentations.py  callbacks.py  clips.py  config.py  dataset.py  evaluate.py  labels.py  light.py  lightning.py  losses.py  modules.py  preprocess.py  readme.md  targets.py  train.py  train_model.py  train_split.py  train_utils.py  types.py
batdetect2/train/legacy/: readme.md  train.py  train_model.py  train_split.py  train_utils.py
batdetect2/utils/: arrays.py  audio_utils.py  detector_utils.py  plot_utils.py  tensors.py  wavfile.py
conf/: config.yaml
conf/datasets/: diff.yaml
data/: datasets.dvc
docs/: plan.md
docs/source/: architecture.md  conf.py  documentation_plan.md  faq.md  getting_started.md  index.md  postprocessing.md
docs/source/data/: aoef.md  index.md  legacy.md
docs/source/development/: index.md
docs/source/explanation/: evaluation-concepts-and-matching.md  extracted-features-and-embeddings.md  index.md  interpreting-formatted-outputs.md  model-output-and-validation.md  pipeline-overview.md  postprocessing-and-thresholds.md  preprocessing-consistency.md  target-encoding-and-decoding.md  what-batdetect2-predicts.md
docs/source/how_to/: analysis-in-python.md  choose-a-model.md  choose-an-inference-input-mode.md  choose-and-configure-evaluation-tasks.md  configure-aoef-dataset.md  configure-audio-preprocessing.md  configure-roi-mapping.md  index.md  (+15 more)
docs/targets/: classes.md  filtering.md  labels.md  tags_and_terms.md  transform.md
example_data/: audio_files.txt  config.yaml  dataset.yaml  targets.yaml
example_data/anns/: 20170701_213954-MYOMYS-LR_0_0.5.wav.json  20180530_213516-EPTSER-LR_0_0.5.wav.json  20180627_215323-RHIFER-LR_0_0.5.wav.json
example_data/configs/: audio.yaml  evaluation.yaml  inference.yaml  logging.yaml  model.yaml  outputs.yaml  training.yaml
notebooks/: Augmentations.ipynb  Migrations.ipynb  Training Preprocess.ipynb  Training.ipynb  data.py  plotting.py  signal_generation.py  targets.py
scripts/: README.md  gen_dataset_summary_image.py  gen_spec_image.py  gen_spec_video.py  viz_helpers.py
src/batdetect2/: __init__.py  api.py  api_v2.py  config.py  configs.py  logging.py  plot.py  types.py
tests/: conftest.py  test_api.py  test_audio_utils.py  test_bat_detect.py  test_cli.py  test_configs.py  test_contrib.py  test_detections.py  test_features.py  test_model.py  utils.py
tests/test_api_v2/: test_api_v2.py  test_finetune.py  test_outputs_io.py
tests/test_cli/: test_base.py  test_data.py  test_detect.py  test_evaluate.py  test_finetune.py  test_predict.py  test_process.py  test_train.py
tests/test_core/: test_registry.py
tests/test_data/: test_batdetect.py  test_datasets.py  test_labels.py
tests/test_evaluate/: test_results.py
tests/test_inference/: test_batch.py  test_clips.py
tests/test_migration/: test_preprocessing.py  test_training.py
tests/test_models/: test_backbones.py  test_blocks.py  test_detectors.py  test_inputs.py
tests/test_outputs/: test_base.py
tests/test_postprocessing/: test_arrays.py  test_decoding.py  test_detection.py  test_extraction.py
tests/test_preprocessing/: test_arrays.py  test_audio.py  test_preprocessor.py  test_spectrogram.py  test_tensors.py
tests/test_targets/: test_classes.py  test_filtering.py  test_rois.py  test_targets.py  test_terms.py  test_transform.py  test_utils.py
tests/test_train/: test_augmentations.py  test_checkpoints.py  test_clips.py  test_config.py  test_labels.py  test_lightning.py  test_optimizers.py  test_preprocessing.py  test_schedulers.py
tests/test_utils/: test_arrays.py  test_tensors.py  test_visualize.py
(+292 files in other folders)
