[project]
name = "batdetect2"
version = "1.0.8"
description = "Deep learning model for detecting and classifying bat echolocation calls in high frequency audio recordings."
authors = [
  { "name" = "Oisin Mac Aodha", "email" = "oisin.macaodha@ed.ac.uk" },
  { "name" = "Santiago Martinez Balvanera", "email" = "santiago.balvanera.20@ucl.ac.uk" },
]
dependencies = [
    "click>=8.1.7",
    "librosa>=0.10.1",
    "matplotlib>=3.7.1",
    "numpy>=1.23.5,<2",
    "pandas>=1.5.3",
    "scikit-learn>=1.2.2",
    "scipy>=1.10.1",
    "torch>=1.13.1,<2.5.0",
    "torchaudio>=1.13.1,<2.5.0",
    "torchvision>=0.14.0",
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = { text = "CC-by-nc-4" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
keywords = [
  "bat",
  "echolocation",
  "deep learning",
  "audio",
  "machine learning",
  "classification",
  "detection",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
batdetect2 = "batdetect2.cli:cli"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.388",
    "pytest>=7.2.2",
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
include = ["batdetect2", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.8"
pythonPlatform = "All"
