[project]
name = "batdetect2"
version = "1.1.1"
description = "Deep learning model for detecting and classifying bat echolocation calls in high frequency audio recordings."
authors = [
  { "name" = "Oisin Mac Aodha", "email" = "oisin.macaodha@ed.ac.uk" },
  { "name" = "Santiago Martinez Balvanera", "email" = "santiago.balvanera.20@ucl.ac.uk" },
]
dependencies = [
  "cf-xarray>=0.9.0",
  "click>=8.1.7",
  "deepmerge>=2.0",
  "hydra-core>=1.3.2",
  "librosa>=0.10.1",
  "lightning[extra]==2.5.0",
  "loguru>=0.7.3",
  "matplotlib>=3.7.1",
  "netcdf4>=1.6.5",
  "numba>=0.60",
  "numpy>=1.23.5",
  "omegaconf>=2.3.0",
  "onnx>=1.16.0",
  "pandas>=1.5.3",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.2.2",
  "scipy>=1.10.1",
  "seaborn>=0.13.2",
  "soundevent[audio,geometry,plot]>=2.10.0",
  "tensorboard>=2.16.2",
  "torch>=1.13.1",
  "torchaudio>=1.13.1",
  "torchvision>=0.14.0",
  "tqdm>=4.66.2",
]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "CC-by-nc-4" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
keywords = [
  "bat",
  "echolocation",
  "deep learning",
  "audio",
  "machine learning",
  "classification",
  "detection",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
batdetect2 = "batdetect2.cli:cli"

[dependency-groups]
jupyter = ["ipywidgets>=8.1.5", "jupyter>=1.1.1"]
marimo = ["marimo>=0.12.2", "pyarrow>=20.0.0"]
dev = [
  "debugpy>=1.8.8",
  "hypothesis>=6.118.7",
  "pytest>=7.2.2",
  "ruff>=0.7.3",
  "ipykernel>=6.29.4",
  "setuptools>=69.5.1",
  "myst-parser>=3.0.1",
  "sphinx-autobuild>=2024.10.3",
  "numpydoc>=1.8.0",
  "sphinx-autodoc-typehints>=2.3.0",
  "sphinx-book-theme>=1.1.4",
  "sphinx-click>=6.1.0",
  "autodoc-pydantic>=2.2.0",
  "pytest-cov>=6.1.1",
  "ty>=0.0.1a12",
  "rust-just>=1.40.0",
  "pandas-stubs>=2.2.2.240807",
  "python-lsp-server>=1.13.0",
  "deepdiff>=8.6.1",
  "pytest-xdist[psutil]>=3.8.0",
]
dvclive = ["dvclive>=3.48.2"]
mlflow = ["mlflow>=3.1.1"]
gradio = [
    "gradio>=6.9.0",
]
dvc = [
    "dvclive>=3.49.0",
]

[tool.ruff]
line-length = 79
target-version = "py310"
exclude = [
  "src/batdetect2/train/legacy",
  "src/batdetect2/plotting/legacy",
  "src/batdetect2/evaluate/legacy",
  "src/batdetect2/finetune",
  "src/batdetect2/utils",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "NPY201"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.src]
include = ["src", "tests"]
exclude = [
  "src/batdetect2/train/legacy",
  "src/batdetect2/plotting/legacy",
  "src/batdetect2/evaluate/legacy",
  "src/batdetect2/finetune",
  "src/batdetect2/utils",
]

[tool.pytest.ini_options]
markers = [
  "slow: marks long-running tests that are skipped in quick runs",
]
